--- a/src/scss/components/_player.scss
+++ b/src/scss/components/_player.scss
@@ -1,13 +1,16 @@
 .player {
   position: relative;
-  width: 768px;
-  height: 375px;
-  margin: 150px auto;
+  max-width: 735px;
+  max-height: 375px;
+
+  @media screen and (max-width: 554px) {
+    font-size: 10px;
+  }
 
   &__video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 375px;
   }
 }
 
