fix: fixed styles for media & orientation

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -13,4 +13,8 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0 auto;
+
+  @media screen and (orientation:landscape) {
+    max-width: 100%;
+  }
 }
