--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -33,6 +33,7 @@
     background-color: rgba(0, 0, 0, 0);
     border: none;
     cursor: pointer;
+    width: 42px;
 
     & svg path {
       transition: fill-opacity ease-in-out 0.2s;
