--- a/src/scss/components/_player.scss
+++ b/src/scss/components/_player.scss
@@ -2,15 +2,25 @@
   position: relative;
   max-width: 735px;
   max-height: 375px;
+  margin-top: 130px;
 
   @media screen and (max-width: 554px) {
     font-size: 10px;
+    margin-top: 0;
+  }
+
+  @media screen and (orientation:landscape) {
+    height: 100vh;
   }
 
   &__video {
     object-fit: contain;
     max-width: 100%;
     max-height: 375px;
+
+    //@media screen and (orientation:landscape) {
+    //
+    //}
   }
 }
 
