--- a/src/scss/components/_player.scss
+++ b/src/scss/components/_player.scss
@@ -2,9 +2,10 @@
   position: relative;
   max-width: 735px;
   max-height: 375px;
-  margin-top: 130px;
+  margin: 40px 0;
 
-  @media screen and (max-width: 554px) {
+
+  @media screen and (max-width: 654px) {
     font-size: 10px;
     margin-top: 0;
   }
@@ -17,10 +18,6 @@
     object-fit: contain;
     max-width: 100%;
     max-height: 375px;
-
-    //@media screen and (orientation:landscape) {
-    //
-    //}
   }
 }
 
