--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,8 @@
 @import './components/all';
 
+// Если успею, поправлю мелкие недочеты в верстке
+// и сделаю горизонтальный адаптив на всю ширину видео
+
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: #282c34;
