fix: added background-color for player

--- a/src/scss/components/_player.scss
+++ b/src/scss/components/_player.scss
@@ -3,6 +3,7 @@
   max-width: 735px;
   max-height: 375px;
   margin: 40px 0;
+  background-color: #000;
 
 
   @media screen and (max-width: 654px) {
