--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,7 +15,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  height: 100vh;
+
+  @media screen and (max-width: 667px) {
+    align-items: flex-start;
+    height: auto;
+  }
 
   @media screen and (orientation:landscape) {
     max-width: 100%;
