--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-width: 100%;
+    width: 100%;
   }
 
   &:hover {
