--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,13 +6,13 @@
 body {
   font-family: 'Open Sans', sans-serif;
   background-color: #282c34;
-  color: #fff;
+  color: $white;
 }
 
 .content {
   max-width: 1280px;
   min-width: 320px;
-  @include flex-center;
+  @include flex-center-center;
   height: 100vh;
 
   @media screen and (max-width: 667px) {
