feat: added styles for panel

--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -20,7 +20,7 @@
     opacity: 1;
   }
 
-  &__type_isOpen {
+  &__type_isDangerZone {
     transition: background-color ease-in-out 2s;
     background-color: rgba(0, 0, 0, 0.8);
     opacity: 1;
@@ -29,20 +29,24 @@
 
   &__button {
     background-color: rgba(0, 0, 0, 0);
+    transition: opacity, scale, ease-in-out 0.3s;
+    cursor: url(https://i.ibb.co/svW7PDm/cursor.png) 28 36 , auto;
     border: none;
-    cursor: pointer;
     width: 42px;
+    opacity: 0.5;
+
+    &:hover {
+      transform: scale(1.2);
+      opacity: 1;
+    }
 
     @media screen and (max-width: 640px) {
       width: 32px;
+      cursor: url(https://i.ibb.co/svW7PDm/cursor.png) 20 28 , auto;
     }
 
     & svg path {
       transition: fill-opacity ease-in-out 0.2s;
-
-      &:hover {
-        fill-opacity: 1;
-      }
     }
   }
 
@@ -116,7 +120,7 @@
   }
   100% {
     transform: scale(1);
-    opacity: 1;
+    opacity: 0.5;
   }
 }
 
