fix: fixed inset for clip-path

--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -129,6 +129,6 @@
     clip-path: inset(0 -10px 0 -10px)
   }
   100% {
-    clip-path: inset(50% 0 50% 0)
+    clip-path: inset(50% -10px 50% -10px)
   }
 }
