--- a/src/scss/components/_panel.scss
+++ b/src/scss/components/_panel.scss
@@ -53,6 +53,7 @@
   &__progress-bar-svg {
     width: 62px;
     height: 280px;
+    transition: clip-path 0.5s;
 
     @media screen and (max-width: 640px) {
       height: 230px;
@@ -71,13 +72,34 @@
     }
   }
 
+  &__progress-bar_animate {
+    position: absolute;
+  }
+
   &__duration {
     @include flex-center;
-    margin: 0 auto;
+    position: absolute;
+    margin: 0;
     padding: 0;
     color: $purple;
     font-size: 12px;
     line-height: 16px;
+
+    &_left {
+      right: 0;
+
+      @media screen and (max-width: 554px) {
+        right: 5px;
+      }
+    }
+
+    &_right{
+      left: 0;
+
+      @media screen and (max-width: 554px) {
+        left: 5px;
+      }
+    }
 
     @media screen and (max-width: 554px) {
       font-size: 10px;
@@ -85,6 +107,7 @@
   }
 
   &__progress-bar {
+    position: relative;
     @include flex-center;
 
     &_left {
@@ -121,14 +144,5 @@
   100% {
     transform: scale(1);
     opacity: 0.5;
-  }
-}
-
-@keyframes progress {
-  0% {
-    clip-path: inset(0 -10px 0 -10px)
-  }
-  100% {
-    clip-path: inset(50% -10px 50% -10px)
   }
 }
